test/functions/compilation-errors/recursive-generic-return.good
recursive-generic-return.chpl:12: warning: RR(int(64))
recursive-generic-return.chpl:15: error: generic return type 'RR'
